--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,30 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".calender_check"
+            android:exported="false" />
+        <activity
+            android:name=".task4"
+            android:exported="false" />
+        <activity
+            android:name=".task3"
+            android:exported="false" />
+        <activity
+            android:name=".task2"
+            android:exported="false" />
+        <activity
+            android:name=".task1"
+            android:exported="false" />
+        <activity
+            android:name=".task0"
+            android:exported="false" />
+        <activity
+            android:name=".task_event_reg"
+            android:exported="false" />
+        <activity
+            android:name=".TemplateActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
