--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".event_1"
+            android:exported="false" />
+        <activity
+            android:name=".event_0"
+            android:exported="false" />
+        <activity
             android:name=".calender_check"
             android:exported="false" />
         <activity
